--- a/src/components/MainWrap.module.scss
+++ b/src/components/MainWrap.module.scss
@@ -1,69 +1,74 @@
 @mixin bgcl($bgcl) {
-    background-color: $bgcl;
+  background-color: $bgcl;
 }
 @mixin width($w) {
-    width: $w;
+  width: $w;
 }
-@mixin font($fs,$ff,$fw,$fc) {
-    font-size: $fs;
-    font-family: $ff;
-    font-weight: $fw;
-    color: $fc ;
-    text-align: justify;
+@mixin font($fs, $ff, $fw, $fc) {
+  font-size: $fs;
+  font-family: $ff;
+  font-weight: $fw;
+  color: $fc;
+  text-align: justify;
 }
 
 .mainWrap {
-    height: 100%;
-    left: 0;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    display: flex;
+  height: 100%;
+  left: 0;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  display: flex;
 }
 
 .mainContent {
-    @include bgcl(#222222);
-    @include width(95%);
-    @include font(100%, Verdana, 700, #ccc);
-        padding: 1rem;
-        overflow: auto;
-
-
+  @include bgcl(#222222);
+  @include width(95%);
+  @include font(100%, Verdana, 700, #ccc);
+  padding: 1rem;
+  overflow: auto;
 }
 
+.leftMenuButton {
+  border: none;
+  background: none;
+  outline: none;
+}
+
+.leftMenuButton:hover {
+    cursor: pointer;
+  }
+
 .leftMenu {
-    @include bgcl(#56579f);
-    @include width(120px);
-    box-shadow: 5px 0px 5px -1px rgba(0,0,0,0.75);
-    
+  @include bgcl(#56579f);
+  @include width(120px);
+  box-shadow: 5px 0px 5px -1px rgba(0, 0, 0, 0.75);
 }
 
 .menuLogo {
-    img {
-        width: 120px;
-        padding-top: 20px;
-    }
-    p {
-        @include font(20px, Verdana, 700, white);
-    }
+  img {
+    width: 120px;
+    padding-top: 20px;
+  }
+  p {
+    @include font(20px, Verdana, 700, white);
+  }
 }
 
-.menuItem{
-    img {
-        width: 60px;
-        padding-top: 20px;
-        display: block;
-        margin: 0 auto;
+.menuItem {
+  img {
+    width: 60px;
+    padding-top: 20px;
+    display: block;
+    margin: 0 auto;
+  }
+  b {
+    padding: 0px;
+    @include font(15px, Verdana, 700, white);
+    &:hover {
+      cursor: default;
     }
-    b {
-        padding: 0px;
-        @include font(15px, Verdana, 700, white);
-            &:hover {
-            cursor: default;
-        }
-
-    }
-    opacity: 70%;
-    text-align: center;
-
+  }
+  opacity: 70%;
+  text-align: center;
 }
